# RandlangCompiler

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  mandelMain
include/: ASTNodes.h  Lexer.h  Parser.h  StaticContent.h  Token.hpp
rdlgExamples/: code.rdlg  functions.cpp  mandel.out  mandel.rdlg  standaloneTest.rdlg  test.cpp  variableTest.rdlg
src/: ASTNodes.cpp  Lexer.cpp  Parser.cpp  main.cpp
